syntax = "proto3";
package v1;

import "google/protobuf/timestamp.proto";

//task we have to do
message ToDo{
	//unique integer indentifier of the todo task
	int64 id = 1;
	//title of the task
	string title = 2;
	//detail desc of the todo task
	string description  =3;
	//date and time to remind the todo task
	google.protobuf.Timestamp reminder = 4;
}

//req to create a new task
message CreateRequest{
	//api version
	string api = 1;
	//task entity to add
	ToDo toDo = 2;
}

message CreateResponse{
	string api = 1;
	int64 id = 2;   //id of created task
}

message ReadRequest{
	string api = 1;
	int64 id = 2;
}

message ReadResponse{
	string api = 1;
	ToDo toDo = 2;  //task entity read by id
}

message UpdateRequest{
	string api = 1;
	ToDo toDo = 2;  //task entity to update
}

message UpdateResponse{
	string api = 1;
	int64 updated = 2;
}

message DeleteRequest{
	string api = 1;
	int64 id = 2;
}

message DeleteResponse{
	string api = 1;
	int64 deleted = 2;
}

message ReadAllRequest{
	string api = 1;
}

message ReadAllResponse{
	string api = 1;
	repeated ToDo toDos = 2;    //list all todo tasks
}

service ToDoService{
	//create new todo task
	rpc Create(CreateRequest) returns (CreateResponse);
	rpc Read(ReadRequest) returns (ReadResponse);
	rpc Update(UpdateRequest) returns (UpdateResponse);
	rpc Delete(DeleteRequest) returns (DeleteResponse);
	rpc ReadAll(ReadAllRequest) returns (ReadAllResponse);
}